updates for "Model checking-based performance prediction for P4"